--- a/privatehub/code-1/style.css
+++ b/privatehub/code-1/style.css
@@ -11,6 +11,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	background: #404861;
+	margin-top: 30px;
 	margin-left: 20px;
 	margin-right: 20px;
 	margin-bottom: 30px;
