--- a/style.css
+++ b/style.css
@@ -81,6 +81,13 @@ p {
         flex-direction: column;
         padding: 20px;
     }
+    
+@media screen and (max-width: 768px) {
+    .minecraft-image {
+        display: none;
+    }
+    
+    }
 
     .image-section img {
         max-width: 100%;
